<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".ChangePassActivity"
    tools:deviceIds="wear"
    tools:ignore="MissingClass">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/outerConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"

        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/inner_frame_layout_padding"
            android:scrollbars="vertical"

            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/title_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/delete"
                android:textColor="@color/white_on_orange" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"

            android:orientation="horizontal"
            android:padding="@dimen/inner_frame_layout_padding"
            android:scrollbars="vertical"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <EditText
                android:id="@+id/destination_field"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:ems="10"
                android:hint="@string/destination"
                android:inputType="textPersonName" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/destination_field"
                app:srcCompat="@android:drawable/ic_menu_myplaces" />

            <EditText
                android:id="@+id/number_people_field"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_alignRight="@id/imageView2"
                android:ems="10"
                android:hint="@string/number_people"
                android:inputType="numberSigned" />


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                app:srcCompat="@android:drawable/ic_menu_mylocation" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/linearLayout2"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"

            android:orientation="horizontal"
            android:padding="@dimen/inner_frame_layout_padding"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <EditText
                android:id="@+id/starting_date_field"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/starting_date"
                android:inputType="date" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/starting_date_field"
                app:srcCompat="@android:drawable/ic_menu_day" />


            <EditText
                android:id="@+id/ending_date_field"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/ending_date_text"
                android:inputType="textPersonName" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/ending_date_field"
                app:srcCompat="@android:drawable/ic_menu_day" />


        </RelativeLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.86">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="238dp"
                    android:baselineAligned="false"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/profile_description_title3"
                        android:layout_width="wrap_content"
                        android:layout_height="27dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="0.5"
                        android:text="@string/profile_description"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/description_field"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="8"
                        android:gravity="top"
                        android:inputType="textMultiLine"
                        android:nestedScrollingEnabled="false"
                        android:singleLine="false" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.88">

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@color/white_on_orange"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </Button>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.wear.widget.BoxInsetLayout>