...
                android:layout_weight="4"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="TITLE" />

            <Button
                android:id="@+id/Button_delete_my_posts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="0.1"
                android:text="@string/edit_post_text"
                app:autoSizeTextType="uniform"
...
