...
    <string name="time_posted">time posted</string>
    <string name="destination">destination</string>
    <string name="delete">delete</string>
    <string name="clear">clear</string>
    <string name="save">save</string>
    <string name="unsave">unsave</string>
    <string name="post">post</string>
    <string name="number_people"># of people</string>

    <string name="title_comment">title</string>
    <string name="starting_date_comment">starting date</string>
    <string name="ending_date_comment">ending date</string>
    <string name="time_posted_comment">time posted</string>
...
    <string name="enter_new_comment_text">Enter new comment…</string>
    <string name="conversation_fragment_name">Messages</string>
    <string name="my_posts_text">My Posts</string>
    <string name="change_username">Change Username</string>
    <string name="user_name">User Name</string>

    <string name="join_group_chat">Join Group Chat </string>

    <string name="From">From</string>
    <string name="Group_Size">Group Size</string>
    <string name="to">To</string>
    <string name="save_description_text">save description</string>
    <string name="dark_mode">Dark Mode</string>
...
