...
                android:layout_weight="4"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="TITLE" />

            <Button
                android:id="@+id/save_post_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/save" />

        </LinearLayout>
...
