...

            <Button
                android:id="@+id/unsave_post_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/unsave" />

        </LinearLayout>

        <TextView
            android:id="@+id/time_of_post"
            android:layout_width="123dp"
...
